--- a/consulta.html
+++ b/consulta.html
@@ -14,12 +14,12 @@
     <!-- Font Awesome -->
     <script defer src="https://use.fontawesome.com/releases/v5.0.8/js/all.js"></script>
 
+    <!-- Programação do app -->
     <script src="app.js"></script>
 
 	</head>
 
   <body onload="carregaListaDespesas()">
-
 
     <nav class="navbar navbar-expand-lg navbar-dark bg-primary mb-5">
       <div class="container">
@@ -131,7 +131,6 @@
                 <th></th>
               </tr>
             </thead>
-
             <tbody id="listaDespesas">
             </tbody>
           </table>
