--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 
 	</head>
 
-  <body>
+  <body carregarRegistroDespesas()>
 
     <nav class="navbar navbar-expand-lg navbar-dark bg-primary mb-5">
       <div class="container">
